--- a/Datalus.Core/Datalus.Core.csproj
+++ b/Datalus.Core/Datalus.Core.csproj
@@ -33,6 +33,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SqlClient, Version=4.6.1.5, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\Datalus\packages\System.Data.SqlClient.4.8.5\lib\net461\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,8 +44,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\FormattableAttribute.cs" />
+    <Compile Include="Attributes\SavableAttribute.cs" />
+    <Compile Include="Attributes\ValidatableAttribute.cs" />
+    <Compile Include="Components\Component.cs" />
+    <Compile Include="Components\ComponentChangedEventArgs.cs" />
+    <Compile Include="Components\ComponentController.cs" />
+    <Compile Include="Components\ComponentEventArgs.cs" />
+    <Compile Include="Components\IComponent.cs" />
+    <Compile Include="Components\IComponentSubscriber.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\EntityController.cs" />
+    <Compile Include="Entities\EntityErrorEventArgs.cs" />
+    <Compile Include="Entities\EntityNotifier.cs" />
+    <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\IEntityNotifier.cs" />
+    <Compile Include="Entities\IEntitySubscriber.cs" />
+    <Compile Include="Interfaces\IHasEntity.cs" />
+    <Compile Include="Interfaces\IModifiable.cs" />
+    <Compile Include="Interfaces\IRuntime.cs" />
+    <Compile Include="Managers\IManager.cs" />
+    <Compile Include="Managers\Manager.cs" />
+    <Compile Include="Processors\IProcessor.cs" />
+    <Compile Include="Processors\Processor.cs" />
+    <Compile Include="Processors\ProcessorController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="All Items.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
