--- a/Datalus.Core/Datalus.Core.csproj
+++ b/Datalus.Core/Datalus.Core.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Components\ComponentEventArgs.cs" />
     <Compile Include="Components\IComponent.cs" />
     <Compile Include="Components\IComponentSubscriber.cs" />
+    <Compile Include="Controllers\DatabaseController.cs" />
+    <Compile Include="Controllers\RuntimeController.cs" />
+    <Compile Include="Controllers\StatusController.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\EntityController.cs" />
     <Compile Include="Entities\EntityErrorEventArgs.cs" />
@@ -60,22 +63,25 @@
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\IEntityNotifier.cs" />
     <Compile Include="Entities\IEntitySubscriber.cs" />
+    <Compile Include="Interfaces\IFormattable.cs" />
     <Compile Include="Interfaces\IHasEntity.cs" />
+    <Compile Include="Interfaces\IHasStatusText.cs" />
     <Compile Include="Interfaces\IModifiable.cs" />
     <Compile Include="Interfaces\IRuntime.cs" />
+    <Compile Include="Interfaces\ISavable.cs" />
+    <Compile Include="Interfaces\IValidatable.cs" />
     <Compile Include="Managers\IManager.cs" />
     <Compile Include="Managers\Manager.cs" />
+    <Compile Include="Managers\ManagerController.cs" />
+    <Compile Include="Misc\PropertyChangedEventArgs.cs" />
     <Compile Include="Processors\IProcessor.cs" />
     <Compile Include="Processors\Processor.cs" />
     <Compile Include="Processors\ProcessorController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="All Items.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
