Added sql to build the MSSQL database

--- a/Datalus.Core/Datalus.Core.csproj
+++ b/Datalus.Core/Datalus.Core.csproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Build Database.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
