--- a/Datalus.Core/Datalus.Core.csproj
+++ b/Datalus.Core/Datalus.Core.csproj
@@ -44,41 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\FormattableAttribute.cs" />
-    <Compile Include="Attributes\SavableAttribute.cs" />
-    <Compile Include="Attributes\ValidatableAttribute.cs" />
-    <Compile Include="Components\Component.cs" />
-    <Compile Include="Components\ComponentChangedEventArgs.cs" />
-    <Compile Include="Components\ComponentController.cs" />
-    <Compile Include="Components\ComponentEventArgs.cs" />
-    <Compile Include="Components\ComponentExtensions.cs" />
-    <Compile Include="Components\IComponent.cs" />
-    <Compile Include="Components\IComponentSubscriber.cs" />
-    <Compile Include="Controllers\DatabaseController.cs" />
-    <Compile Include="Controllers\RuntimeController.cs" />
-    <Compile Include="Controllers\StatusController.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\EntityController.cs" />
-    <Compile Include="Entities\EntityErrorEventArgs.cs" />
-    <Compile Include="Entities\EntityNotifier.cs" />
-    <Compile Include="Entities\IEntity.cs" />
-    <Compile Include="Entities\IEntityNotifier.cs" />
-    <Compile Include="Entities\IEntitySubscriber.cs" />
-    <Compile Include="Interfaces\IFormattable.cs" />
-    <Compile Include="Interfaces\IHasEntity.cs" />
-    <Compile Include="Interfaces\IHasStatusText.cs" />
-    <Compile Include="Interfaces\IModifiable.cs" />
-    <Compile Include="Interfaces\IRuntime.cs" />
-    <Compile Include="Interfaces\ISavable.cs" />
-    <Compile Include="Interfaces\IValidatable.cs" />
-    <Compile Include="Managers\IManager.cs" />
-    <Compile Include="Managers\Manager.cs" />
-    <Compile Include="Managers\ManagerController.cs" />
-    <Compile Include="Misc\PropertyChangedEventArgs.cs" />
-    <Compile Include="Processors\IProcessor.cs" />
-    <Compile Include="Processors\Processor.cs" />
-    <Compile Include="Processors\ProcessorController.cs" />
+    <Compile Include="Component.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="Events.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RuntimeController.cs" />
+    <Compile Include="System.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
